workshop04/weatherapp-ing.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: weatherapp-ing
  namespace: weatherns
  labels:
    name: weatherapp-ing
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http: 
      paths: 
      - path: /
        backend:
          serviceName: weatherapp-svc
          servicePort: 3000
