workshop04/weatherapp.yaml
---
kind: Namespace
apiVersion: v1

metadata:
    name: weatherns
    labels:
        app: weatherapp
---
kind: Deployment
apiVersion: apps/v1

metadata:
    name: weatherapp-deploy
    namespace: weatherns
    labels:
        app: weatherapp-deploy

spec:
    replicas: 2
    selector:
        matchLabels:
            app: weatherapp-pod
    template:
        metadata:
            name: weatherapp-pod
            labels:
                app: weatherapp-pod
                version: v1
        spec:
            containers:
            - name: weatherapp
              image: stackupiss/weather:v1
              imagePullPolicy: Always
              ports:
              - name: weatherapp-port
                containerPort: 3000
              readinessProbe:
                httpGet:
                    path: /ready
                    port: weatherapp-port
              livenessProbe:
                httpGet:
                    path: /health
                    port: weatherapp-port
              resources:
                requests:
                    cpu: 100m
                    memory: 16Mi
                limits:
                    cpu: 150m
                    memory: 64Mi
            
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1

---
kind: Service
apiVersion: v1

metadata:
    name: weatherapp-svc
    namespace: weatherns
    labels:
        app: weatherapp-svc

spec:
    type: ClusterIP
    selector:
        app: weatherapp-pod
    ports:
    - name: weatherapp-svc-port
      port: 3000
      targetPort: weatherapp-port

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: weatherapp-ing
  namespace: weatherns
  labels:
    name: weatherapp-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http: 
      paths: 
      - path: /
        backend:
          serviceName: weatherapp-svc
          servicePort: 3000
